deps/v8/test/message/fail/call-primitive-function.out
# Copyright 2016 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

*%(basename)s:6: TypeError: non_callable is not a function
non_callable();
^
TypeError: non_callable is not a function
    at *%(basename)s:6:1
